New Design and Responsive

--- a/webservice/style.css
+++ b/webservice/style.css
@@ -13,11 +13,41 @@
 	padding: 0;
 
 }
+body{
+	overflow-x: hidden;
+}
 
 .about{
 	display: flex;
 	justify-content: space-between;
 	margin-top: 1rem;
+}
+
+#sidebar-toggle{
+	display: none;
+}
+
+.body-label {
+	position: fixed;
+	height: 100%;
+	width: calc(100% - 280px);
+	z-index: 30;
+	right: -100%;
+	top: 0;
+}
+
+#sidebar-toggle:checked ~ .sidebar {
+	left: -100%;
+}
+
+#sidebar-toggle:checked ~ .main-content header {
+	left: 0;
+	width: 100%;
+	right: 0;
+}
+
+#sidebar-toggle:checked ~ .main-content {
+	margin-left: 0;
 }
 
 .sidebar{
@@ -29,6 +59,8 @@
 	padding: 1rem 1.5rem;
 	background: var(--color-main);
 	color: #fff;
+	z-index: 20;
+	transition: left 270ms ;
 }
 
 .sidebar-brand{
@@ -116,6 +148,7 @@
 
 .main-content	{
 	margin-left: 280px;
+	transition: margin-left 270ms ;
 }
 
 header{
@@ -123,8 +156,15 @@ header{
 	display: flex;
 	justify-content: space-between;
 	align-items: center	;
-
 	padding: 1rem 1.5rem;
+	position: fixed;
+	left: 280px;
+	width: calc(100% - 280px);
+	top: 0;
+	z-index: 20;
+	background: #fff;
+	box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
+	transition: left 270ms ;
 }
 
 .menu-toggle label{
@@ -147,8 +187,90 @@ header{
 }
 
 main{
+	margin-top: 70px;
 	padding: 1.5rem;
 	color: #fff;
 	background: #383c4a;
 	min-height:calc(100vh - 70px);
+}
+
+.page-header {
+	display: flex;
+	justify-content: space-between;
+}
+
+.header-actions button {
+	outline:  none;
+	background: transparent;
+	border:  2px solid #ccc;
+	padding: .6rem 1rem;
+	margin-left: 1rem;
+	border-radius: 3px;
+	font-weight: 600;
+}
+
+.header-actions button span {
+	font-size: 1.2rem;
+	margin-right: .6rem;
+}
+
+.cards{
+	color: #383c4a ;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-gap: 3rem;
+	margin-top: 2rem;
+}
+
+.card-single {
+	background: #fff;
+	padding: 1rem;
+	box-shadow: 3px 2px 6px rgba(0, 0, 0, 0.4);
+}
+
+@media only screen and (max-width: 1124px) {
+	.sidebar {
+		left: -100%;
+		z-index: 30;
+	}
+
+	.main-content {
+		margin-left: 0;
+	}
+
+	header {
+		left: 0;
+		width: 100%;
+	}
+
+	#sidebar-toggle:checked ~ .sidebar {
+		left: 0;
+	}
+
+	#sidebar-toggle:checked ~ .body-label {
+		right: 0;
+	}
+
+	.cards {
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
+
+@media only screen and (max-width: 768px) {
+	.cards {
+		grid-template-columns: 100%;
+	}
+
+	.page-header {
+		display: block;
+	}
+
+	.header-actions {
+		margin-top: 1rem;
+		text-align: right;
+	}
+
+	.header-actions button:first-child {
+		margin-left: 0rem;
+	}
 }
