--- a/ipuatsons/public/style.css
+++ b/ipuatsons/public/style.css
@@ -448,6 +448,18 @@ input[type=button], select {
   box-sizing: border-box;
 }
 
+input[type=submit], select {
+  color:black;
+  width: 40%;
+  padding: 10px;
+  margin-left: 15px;
+  margin-top: 15px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
 
 .card {
   /* Add shadows to create the "card" effect */
@@ -496,4 +508,55 @@ input[type=button], select {
 .content {
   padding: 10px;
   
+}
+
+
+
+
+/* Dropup Button */
+.dropbtn {
+  background-color: #5294e2;
+  color: white;
+  padding: 3px;
+  font-size: 16px;
+  border: none;
+}
+
+/* The container <div> - needed to position the dropup content */
+.dropup {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropup content (Hidden by Default) */
+.dropup-content {
+  display: none;
+  position: absolute;
+  bottom: 25px;
+  right: 0px ;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropup */
+.dropup-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropup links on hover */
+.dropup-content a:hover {background-color: #ddd}
+
+/* Show the dropup menu on hover */
+.dropup:hover .dropup-content {
+  display: block;
+}
+
+/* Change the background color of the dropup button when the dropup content is shown */
+.dropup:hover .dropbtn {
+  background-color: #2980B9;
 }
