--- a/ipuatsons/public/style.css
+++ b/ipuatsons/public/style.css
@@ -682,3 +682,29 @@ box-shadow: rgba(255,255,255, 0.75) 1.5em 0 0 0, rgba(255,255,255, 0.75) 1.1em 1
     transform: rotate(360deg);
   }
 }
+
+
+
+.full-img {
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  z-index: 999;
+  height: 100%;
+  width: 100%;
+  overflow: show;
+  margin:auto;
+  padding: 1%;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+    background: radial-gradient(rgba(20, 20, 20,.8), rgba(0, 0, 0, .8));
+  background: -webkit-radial-gradient(rgba(20, 20, 20,.8), rgba(0, 0, 0,.8));
+}
+
+.full-img button{
+  height: 5%;
+  background-color: red;
+  width: 5%;
+}
