--- a/ipuatsons/public/style.css
+++ b/ipuatsons/public/style.css
@@ -1,28 +1,195 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
 * {
-  font-family: "Poppins", sans-serif;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  list-style: none;
-  text-decoration: none;
+	font-family: "Poppins", sans-serif;
+	box-sizing: border-box;
+	list-style-type: none;
+	text-decoration: none;
+	margin: 0;
+	padding: 0;
   color: #fff;
 }
 body {
   background: #383c4a;
+  overflow-x: hidden;
 }
 
 :root {
   --gradient: linear-gradient(to right, #e2336b, #fcac46);
 }
 
-.sidebar {
+.sidebar{
+  width: 280px;
   position: fixed;
-  width: 300px;
-  height: 100vh;
+  left: 0;
+  top: 0;
+  height: 100%;
+  padding: 1rem 1.5rem;
+  background: var(--color-main);
+  color: #fff;
+  z-index: 20;
+  transition: left 270ms ;
   background: #4b5162;
-  padding: 20px;
 }
+
+#sidebar-toggle{
+	display: none;
+}
+
+.body-label {
+	position: fixed;
+	height: 100%;
+	width: calc(100% - 280px);
+	z-index: 30;
+	right: -100%;
+	top: 0;
+}
+
+#sidebar-toggle:checked ~ .sidebar {
+	left: -100%;
+}
+
+#sidebar-toggle:checked ~ .main-content header {
+	left: 0;
+	width: 100%;
+	right: 0;
+}
+
+#sidebar-toggle:checked ~ .main-content {
+	margin-left: 0;
+}
+
+.sidebar-brand{
+	height: 100px;
+}
+
+.brand-flex	{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.brand-icons span{
+	font-size: 1.5rem;
+	margin-left: .5rem;
+}
+
+.sidebar-user {
+	margin-left: 0rem 0rem 1rem 0rem;
+	text-align: center;
+}
+
+.sidebar-user img{
+	width: 110px;
+	height: 110px;
+	object-fit:  cover;
+	border-radius: 37%;
+	object-position: center;
+}
+
+.sidebar-user h3 {
+	font-size: 1rem;
+}
+
+.sidebar-user span{
+	font-size: .8rem;
+}
+
+.sidebar-menu{
+	margin-top: 1rem;
+}
+
+.sidebar-menu ul{
+	margin-bottom: 1.5rem;
+}
+
+.sidebar-menu li{
+	margin-bottom: .9rem;
+}
+
+.sidebar-menu a:hover,
+.sidebar-menu .active {
+  color: #5294e2;
+}
+.sidebar-menu a:hover::before,
+.sidebar-menu .active::before {
+  content: "";
+  position: absolute;
+  right: 0;
+  width: 2px;
+  height: 17px;
+  background: #5294e2;
+}
+
+.sidebar-menu li a{
+	color: #efefef;
+	font-size: .9rem;
+	display: flex;
+	align-items: center;
+}
+
+.sidebar-menu li a span {
+	font-size: 1.5rem;
+	display: inline-block;
+	margin-right: .8rem;
+}
+
+.menu-head{
+	text-transform: uppercase;
+	color: #8da2fb;
+	font-size: .9rem;
+	font-weight: 500;
+	margin-bottom: .8rem;
+}
+
+.main-content	{
+	margin-left: 280px;
+	transition: margin-left 270ms ;
+}
+
+header{
+	height: 70px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center	;
+	padding: 1rem 1.5rem;
+	position: fixed;
+	left: 280px;
+	width: calc(100% - 280px);
+	top: 0;
+	z-index: 20;
+	background: #fff;
+	box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
+	transition: left 270ms ;
+}
+
+.menu-toggle label{
+	height: 60px;
+	width: 60px;
+	display: grid;
+	place-items: center;
+	font-size: 1.5rem;
+	border-radius: 50%;
+}
+
+.header-icons span{
+	display: inline-block;
+	margin-left: .7rem;
+	font-size: 1.4rem;
+}
+
+.menu-toggle label:hover{
+	background: #efefef;
+}
+
+
+main{
+	margin-top: 70px;
+	padding: 1.5rem;
+	color: #fff;
+	background: #383c4a;
+	min-height:calc(100vh - 70px);
+}
+
 .main-home {
   position: absolute;
   width: 80%;
@@ -65,6 +232,42 @@ body {
   object-position: center;
 }
 
+
+.page-header {
+	display: flex;
+	justify-content: space-between;
+}
+
+.header-actions button {
+	outline:  none;
+	background: transparent;
+	border:  2px solid #ccc;
+	padding: .6rem 1rem;
+	margin-left: 1rem;
+	border-radius: 3px;
+	font-weight: 600;
+}
+
+.header-actions button span {
+	font-size: 1.2rem;
+	margin-right: .6rem;
+}
+
+.cards{
+	color: #383c4a ;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-gap: 3rem;
+	margin-top: 2rem;
+}
+
+.card-single {
+	background: #fff;
+	padding: 1rem;
+	box-shadow: 3px 2px 6px rgba(0, 0, 0, 0.4);
+}
+
+
 .name {
   display: flex;
   align-items: center;
@@ -88,8 +291,8 @@ body {
 
 .about {
   display: flex;
-  justify-content: space-between;
-  margin-top: 1rem;
+	justify-content: space-between;
+	margin-top: 1rem;
 }
 .box {
   text-align: center;
@@ -707,4 +910,52 @@ box-shadow: rgba(255,255,255, 0.75) 1.5em 0 0 0, rgba(255,255,255, 0.75) 1.1em 1
   height: 5%;
   background-color: red;
   width: 5%;
+}
+
+
+@media only screen and (max-width: 1124px) {
+	.sidebar {
+		left: -100%;
+		z-index: 30;
+	}
+
+	.main-content {
+		margin-left: 0;
+	}
+
+	header {
+		left: 0;
+		width: 100%;
+	}
+
+	#sidebar-toggle:checked ~ .sidebar {
+		left: 0;
+	}
+
+	#sidebar-toggle:checked ~ .body-label {
+		right: 0;
+	}
+
+	.cards {
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
+
+@media only screen and (max-width: 768px) {
+	.cards {
+		grid-template-columns: 100%;
+	}
+
+	.page-header {
+		display: block;
+	}
+
+	.header-actions {
+		margin-top: 1rem;
+		text-align: right;
+	}
+
+	.header-actions button:first-child {
+		margin-left: 0rem;
+	}
 }
