--- a/ipuatsons/src/assets/style.css
+++ b/ipuatsons/src/assets/style.css
@@ -6,9 +6,9 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
-  color: #fff;
 }
 body {
+  color: #000;
   background: #383c4a;
 }
 
