add chapter 4 in report doc and fix some bug

--- a/ipuatsons/src/assets/style.css
+++ b/ipuatsons/src/assets/style.css
@@ -395,7 +395,7 @@ body {
 
 
 .login-regis .menu{
-  background: #4b5162;
+  background: #383c4a;
   display: flex;
   justify-content: center;
   align-items: center;
