--- a/ipuatsons/public/style.css
+++ b/ipuatsons/public/style.css
@@ -597,14 +597,19 @@ main{
 
 
 .login-regis .menu{
-  background: #4b5162;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   min-height: 100vh;
-  
-  
+}
+
+.setting .menu{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 75vh;
 }
 
 input[type=text], select {
@@ -665,21 +670,21 @@ input[type=submit], select {
 
 
 .card {
-  /* Add shadows to create the "card" effect */
+
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   width: fit-content;
   padding: 10px;
   background-color: #4b5162;
-  border-radius: 5px; /* 5px rounded corners */
+  border-radius: 5px;
 }
 
-/* On mouse-over, add a deeper shadow */
+
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
-/* Add some padding inside the card container */
+
 .container {
   padding: 2px 16px;
 }
@@ -688,26 +693,26 @@ input[type=submit], select {
   margin: 8px -16px;
 }
 
-/* Add padding BETWEEN each column (if you want) */
+
 .row,
 .row > .column {
   padding: 8px;
 }
 
-/* Create three equal columns that floats next to each other */
+
 .column {
   float: left;
   width: 20%;
 }
 
-/* Clear floats after rows */
+
 .row:after {
   content: "";
   display: table;
   clear: both;
 }
 
-/* Content */
+
 .content {
   padding: 10px;
   
@@ -716,7 +721,7 @@ input[type=submit], select {
 
 
 
-/* Dropup Button */
+
 .dropbtn {
   background-color: #5294e2;
   color: white;
@@ -725,13 +730,13 @@ input[type=submit], select {
   border: none;
 }
 
-/* The container <div> - needed to position the dropup content */
+
 .dropup {
   position: relative;
   display: inline-block;
 }
 
-/* Dropup content (Hidden by Default) */
+
 .dropup-content {
   display: none;
   position: absolute;
@@ -743,7 +748,7 @@ input[type=submit], select {
   z-index: 1;
 }
 
-/* Links inside the dropup */
+
 .dropup-content a {
   color: black;
   padding: 12px 16px;
@@ -751,20 +756,20 @@ input[type=submit], select {
   display: block;
 }
 
-/* Change color of dropup links on hover */
+
 .dropup-content a:hover {background-color: #ddd}
 
-/* Show the dropup menu on hover */
+
 .dropup:hover .dropup-content {
   display: block;
 }
 
-/* Change the background color of the dropup button when the dropup content is shown */
+
 .dropup:hover .dropbtn {
   background-color: #2980B9;
 }
 
-/* Absolute Center Spinner */
+
 .loading {
   position: fixed;
   z-index: 999;
@@ -778,7 +783,7 @@ input[type=submit], select {
   right: 0;
 }
 
-/* Transparent Overlay */
+
 .loading:before {
   content: '';
   display: block;
@@ -792,9 +797,9 @@ input[type=submit], select {
   background: -webkit-radial-gradient(rgba(20, 20, 20,.8), rgba(0, 0, 0,.8));
 }
 
-/* :not(:required) hides these rules from IE9 and below */
+
 .loading:not(:required) {
-  /* hide "loading..." text */
+
   font: 0/0 a;
   color: transparent;
   text-shadow: none;
@@ -819,7 +824,7 @@ input[type=submit], select {
 box-shadow: rgba(255,255,255, 0.75) 1.5em 0 0 0, rgba(255,255,255, 0.75) 1.1em 1.1em 0 0, rgba(255,255,255, 0.75) 0 1.5em 0 0, rgba(255,255,255, 0.75) -1.1em 1.1em 0 0, rgba(255,255,255, 0.75) -1.5em 0 0 0, rgba(255,255,255, 0.75) -1.1em -1.1em 0 0, rgba(255,255,255, 0.75) 0 -1.5em 0 0, rgba(255,255,255, 0.75) 1.1em -1.1em 0 0;
 }
 
-/* Animation */
+
 
 @-webkit-keyframes spinner {
   0% {
