--- a/ipuatsons/src/assets/style.css
+++ b/ipuatsons/src/assets/style.css
@@ -1,28 +1,195 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
 * {
-  font-family: "Poppins", sans-serif;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  list-style: none;
-  text-decoration: none;
+	font-family: "Poppins", sans-serif;
+	box-sizing: border-box;
+	list-style-type: none;
+	text-decoration: none;
+	margin: 0;
+	padding: 0;
+  color: #fff;
 }
 body {
-  color: #000;
   background: #383c4a;
+  overflow-x: hidden;
 }
 
 :root {
   --gradient: linear-gradient(to right, #e2336b, #fcac46);
 }
 
-.sidebar {
+.sidebar{
+  width: 280px;
   position: fixed;
-  width: 300px;
-  height: 100vh;
+  left: 0;
+  top: 0;
+  height: 100%;
+  padding: 1rem 1.5rem;
+  background: var(--color-main);
+  color: #fff;
+  z-index: 20;
+  transition: left 270ms ;
   background: #4b5162;
-  padding: 20px;
 }
+
+#sidebar-toggle{
+	display: none;
+}
+
+.body-label {
+	position: fixed;
+	height: 100%;
+	width: calc(100% - 280px);
+	z-index: 30;
+	right: -100%;
+	top: 0;
+}
+
+#sidebar-toggle:checked ~ .sidebar {
+	left: -100%;
+}
+
+#sidebar-toggle:checked ~ .main-content header {
+	left: 0;
+	width: 100%;
+	right: 0;
+}
+
+#sidebar-toggle:checked ~ .main-content {
+	margin-left: 0;
+}
+
+.sidebar-brand{
+	height: 100px;
+}
+
+.brand-flex	{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.brand-icons span{
+	font-size: 1.5rem;
+	margin-left: .5rem;
+}
+
+.sidebar-user {
+	margin-left: 0rem 0rem 1rem 0rem;
+	text-align: center;
+}
+
+.sidebar-user img{
+	width: 110px;
+	height: 110px;
+	object-fit:  cover;
+	border-radius: 37%;
+	object-position: center;
+}
+
+.sidebar-user h3 {
+	font-size: 1rem;
+}
+
+.sidebar-user span{
+	font-size: .8rem;
+}
+
+.sidebar-menu{
+	margin-top: 1rem;
+}
+
+.sidebar-menu ul{
+	margin-bottom: 1.5rem;
+}
+
+.sidebar-menu li{
+	margin-bottom: .9rem;
+}
+
+.sidebar-menu a:hover,
+.sidebar-menu .active {
+  color: #5294e2;
+}
+.sidebar-menu a:hover::before,
+.sidebar-menu .active::before {
+  content: "";
+  position: absolute;
+  right: 0;
+  width: 2px;
+  height: 17px;
+  background: #5294e2;
+}
+
+.sidebar-menu li a{
+	color: #efefef;
+	font-size: .9rem;
+	display: flex;
+	align-items: center;
+}
+
+.sidebar-menu li a span {
+	font-size: 1.5rem;
+	display: inline-block;
+	margin-right: .8rem;
+}
+
+.menu-head{
+	text-transform: uppercase;
+	color: #8da2fb;
+	font-size: .9rem;
+	font-weight: 500;
+	margin-bottom: .8rem;
+}
+
+.main-content	{
+	margin-left: 280px;
+	transition: margin-left 270ms ;
+}
+
+header{
+	height: 70px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center	;
+	padding: 1rem 1.5rem;
+	position: fixed;
+	left: 280px;
+	width: calc(100% - 280px);
+	top: 0;
+	z-index: 20;
+	background: #fff;
+	box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
+	transition: left 270ms ;
+}
+
+.menu-toggle label{
+	height: 60px;
+	width: 60px;
+	display: grid;
+	place-items: center;
+	font-size: 1.5rem;
+	border-radius: 50%;
+}
+
+.header-icons span{
+	display: inline-block;
+	margin-left: .7rem;
+	font-size: 1.4rem;
+}
+
+.menu-toggle label:hover{
+	background: #efefef;
+}
+
+
+main{
+	margin-top: 70px;
+	padding: 1.5rem;
+	color: #fff;
+	background: #383c4a;
+	min-height:calc(100vh - 70px);
+}
+
 .main-home {
   position: absolute;
   width: 80%;
@@ -65,6 +232,42 @@ body {
   object-position: center;
 }
 
+
+.page-header {
+	display: flex;
+	justify-content: space-between;
+}
+
+.header-actions button {
+	outline:  none;
+	background: transparent;
+	border:  2px solid #ccc;
+	padding: .6rem 1rem;
+	margin-left: 1rem;
+	border-radius: 3px;
+	font-weight: 600;
+}
+
+.header-actions button span {
+	font-size: 1.2rem;
+	margin-right: .6rem;
+}
+
+.cards{
+	color: #383c4a ;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-gap: 3rem;
+	margin-top: 2rem;
+}
+
+.card-single {
+	background: #fff;
+	padding: 1rem;
+	box-shadow: 3px 2px 6px rgba(0, 0, 0, 0.4);
+}
+
+
 .name {
   display: flex;
   align-items: center;
@@ -88,8 +291,8 @@ body {
 
 .about {
   display: flex;
-  justify-content: space-between;
-  margin-top: 1rem;
+	justify-content: space-between;
+	margin-top: 1rem;
 }
 .box {
   text-align: center;
@@ -139,7 +342,6 @@ body {
 }
 
 .header {
-  background: #000000;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -395,14 +597,19 @@ body {
 
 
 .login-regis .menu{
-  background: #383c4a;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   min-height: 100vh;
-  
-  
+}
+
+.setting .menu{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 75vh;
 }
 
 input[type=text], select {
@@ -447,4 +654,313 @@ input[type=button], select {
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
+}
+
+input[type=submit], select {
+  color:black;
+  width: 40%;
+  padding: 10px;
+  margin-left: 15px;
+  margin-top: 15px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+
+.card {
+
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: fit-content;
+  padding: 10px;
+  background-color: #4b5162;
+  border-radius: 5px;
+}
+
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+
+.container {
+  padding: 2px 16px;
+}
+
+.row {
+  margin: 8px -16px;
+}
+
+
+.row,
+.row > .column {
+  padding: 8px;
+}
+
+
+.column {
+  float: left;
+  width: 20%;
+}
+
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+
+.content {
+  padding: 10px;
+  
+}
+
+
+
+
+
+.dropbtn {
+  background-color: #5294e2;
+  color: white;
+  padding: 3px;
+  font-size: 16px;
+  border: none;
+}
+
+
+.dropup {
+  position: relative;
+  display: inline-block;
+}
+
+
+.dropup-content {
+  display: none;
+  position: absolute;
+  bottom: 25px;
+  right: 0px ;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+
+.dropup-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+
+.dropup-content a:hover {background-color: #ddd}
+
+
+.dropup:hover .dropup-content {
+  display: block;
+}
+
+
+.dropup:hover .dropbtn {
+  background-color: #2980B9;
+}
+
+
+.loading {
+  position: fixed;
+  z-index: 999;
+  height: 2em;
+  width: 2em;
+  overflow: show;
+  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+
+.loading:before {
+  content: '';
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+    background: radial-gradient(rgba(20, 20, 20,.8), rgba(0, 0, 0, .8));
+
+  background: -webkit-radial-gradient(rgba(20, 20, 20,.8), rgba(0, 0, 0,.8));
+}
+
+
+.loading:not(:required) {
+
+  font: 0/0 a;
+  color: transparent;
+  text-shadow: none;
+  background-color: transparent;
+  border: 0;
+}
+
+.loading:not(:required):after {
+  content: '';
+  display: block;
+  font-size: 10px;
+  width: 1em;
+  height: 1em;
+  margin-top: -0.5em;
+  -webkit-animation: spinner 700ms infinite linear;
+  -moz-animation: spinner 700ms infinite linear;
+  -ms-animation: spinner 700ms infinite linear;
+  -o-animation: spinner 700ms infinite linear;
+  animation: spinner 700ms infinite linear;
+  border-radius: 0.5em;
+  -webkit-box-shadow: rgba(255,255,255, 0.75) 1.5em 0 0 0, rgba(255,255,255, 0.75) 1.1em 1.1em 0 0, rgba(255,255,255, 0.75) 0 1.5em 0 0, rgba(255,255,255, 0.75) -1.1em 1.1em 0 0, rgba(255,255,255, 0.75) -1.5em 0 0 0, rgba(255,255,255, 0.75) -1.1em -1.1em 0 0, rgba(255,255,255, 0.75) 0 -1.5em 0 0, rgba(255,255,255, 0.75) 1.1em -1.1em 0 0;
+box-shadow: rgba(255,255,255, 0.75) 1.5em 0 0 0, rgba(255,255,255, 0.75) 1.1em 1.1em 0 0, rgba(255,255,255, 0.75) 0 1.5em 0 0, rgba(255,255,255, 0.75) -1.1em 1.1em 0 0, rgba(255,255,255, 0.75) -1.5em 0 0 0, rgba(255,255,255, 0.75) -1.1em -1.1em 0 0, rgba(255,255,255, 0.75) 0 -1.5em 0 0, rgba(255,255,255, 0.75) 1.1em -1.1em 0 0;
+}
+
+
+
+@-webkit-keyframes spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@-moz-keyframes spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@-o-keyframes spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+
+
+.full-img {
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  z-index: 999;
+  height: 100%;
+  width: 100%;
+  overflow: show;
+  margin:auto;
+  padding: 1%;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+    background: radial-gradient(rgba(20, 20, 20,.8), rgba(0, 0, 0, .8));
+  background: -webkit-radial-gradient(rgba(20, 20, 20,.8), rgba(0, 0, 0,.8));
+}
+
+.full-img button{
+  height: 5%;
+  background-color: red;
+  width: 5%;
+}
+
+
+@media only screen and (max-width: 1124px) {
+	.sidebar {
+		left: -100%;
+		z-index: 30;
+	}
+
+	.main-content {
+		margin-left: 0;
+	}
+
+	header {
+		left: 0;
+		width: 100%;
+	}
+
+	#sidebar-toggle:checked ~ .sidebar {
+		left: 0;
+	}
+
+	#sidebar-toggle:checked ~ .body-label {
+		right: 0;
+	}
+
+	.cards {
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
+
+@media only screen and (max-width: 768px) {
+	.cards {
+		grid-template-columns: 100%;
+	}
+
+	.page-header {
+		display: block;
+	}
+
+	.header-actions {
+		margin-top: 1rem;
+		text-align: right;
+	}
+
+	.header-actions button:first-child {
+		margin-left: 0rem;
+	}
 }
