--- a/ipuatsons/src/assets/style.css
+++ b/ipuatsons/src/assets/style.css
@@ -1,11 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
 * {
-	font-family: "Poppins", sans-serif;
-	box-sizing: border-box;
-	list-style-type: none;
-	text-decoration: none;
-	margin: 0;
-	padding: 0;
+  font-family: "Poppins", sans-serif;
+  box-sizing: border-box;
+  list-style-type: none;
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
   color: #fff;
 }
 body {
@@ -17,7 +17,7 @@ body {
   --gradient: linear-gradient(to right, #e2336b, #fcac46);
 }
 
-.sidebar{
+.sidebar {
   width: 280px;
   position: fixed;
   left: 0;
@@ -27,83 +27,83 @@ body {
   background: var(--color-main);
   color: #fff;
   z-index: 20;
-  transition: left 270ms ;
+  transition: left 270ms;
   background: #4b5162;
 }
 
-#sidebar-toggle{
-	display: none;
+#sidebar-toggle {
+  display: none;
 }
 
 .body-label {
-	position: fixed;
-	height: 100%;
-	width: calc(100% - 280px);
-	z-index: 30;
-	right: -100%;
-	top: 0;
+  position: fixed;
+  height: 100%;
+  width: calc(100% - 280px);
+  z-index: 30;
+  right: -100%;
+  top: 0;
 }
 
 #sidebar-toggle:checked ~ .sidebar {
-	left: -100%;
+  left: -100%;
 }
 
 #sidebar-toggle:checked ~ .main-content header {
-	left: 0;
-	width: 100%;
-	right: 0;
+  left: 0;
+  width: 100%;
+  right: 0;
 }
 
 #sidebar-toggle:checked ~ .main-content {
-	margin-left: 0;
+  margin-left: 0;
 }
 
-.sidebar-brand{
-	height: 100px;
+.sidebar-brand {
+  height: 100px;
 }
 
-.brand-flex	{
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+.brand-flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.brand-icons span{
-	font-size: 1.5rem;
-	margin-left: .5rem;
+.brand-icons span {
+  font-size: 1.5rem;
+  margin-left: 0.5rem;
 }
 
 .sidebar-user {
-	margin-left: 0rem 0rem 1rem 0rem;
-	text-align: center;
+  margin-left: 0rem 0rem 1rem 0rem;
+  text-align: center;
 }
 
-.sidebar-user img{
-	width: 110px;
-	height: 110px;
-	object-fit:  cover;
-	border-radius: 37%;
-	object-position: center;
+.sidebar-user img {
+  width: 110px;
+  height: 110px;
+  object-fit: cover;
+  border-radius: 37%;
+  object-position: center;
 }
 
 .sidebar-user h3 {
-	font-size: 1rem;
+  font-size: 1rem;
 }
 
-.sidebar-user span{
-	font-size: .8rem;
+.sidebar-user span {
+  font-size: 0.8rem;
 }
 
-.sidebar-menu{
-	margin-top: 1rem;
+.sidebar-menu {
+  margin-top: 1rem;
 }
 
-.sidebar-menu ul{
-	margin-bottom: 1.5rem;
+.sidebar-menu ul {
+  margin-bottom: 1.5rem;
 }
 
-.sidebar-menu li{
-	margin-bottom: .9rem;
+.sidebar-menu li {
+  margin-bottom: 0.9rem;
 }
 
 .sidebar-menu a:hover,
@@ -120,74 +120,73 @@ body {
   background: #5294e2;
 }
 
-.sidebar-menu li a{
-	color: #efefef;
-	font-size: .9rem;
-	display: flex;
-	align-items: center;
+.sidebar-menu li a {
+  color: #efefef;
+  font-size: 0.9rem;
+  display: flex;
+  align-items: center;
 }
 
 .sidebar-menu li a span {
-	font-size: 1.5rem;
-	display: inline-block;
-	margin-right: .8rem;
+  font-size: 1.5rem;
+  display: inline-block;
+  margin-right: 0.8rem;
 }
 
-.menu-head{
-	text-transform: uppercase;
-	color: #8da2fb;
-	font-size: .9rem;
-	font-weight: 500;
-	margin-bottom: .8rem;
+.menu-head {
+  text-transform: uppercase;
+  color: #8da2fb;
+  font-size: 0.9rem;
+  font-weight: 500;
+  margin-bottom: 0.8rem;
 }
 
-.main-content	{
-	margin-left: 280px;
-	transition: margin-left 270ms ;
+.main-content {
+  margin-left: 280px;
+  transition: margin-left 270ms;
 }
 
-header{
-	height: 70px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center	;
-	padding: 1rem 1.5rem;
-	position: fixed;
-	left: 280px;
-	width: calc(100% - 280px);
-	top: 0;
-	z-index: 20;
-	background: #fff;
-	box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
-	transition: left 270ms ;
+header {
+  height: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 1.5rem;
+  position: fixed;
+  left: 280px;
+  width: calc(100% - 280px);
+  top: 0;
+  z-index: 20;
+  background: #fff;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
+  transition: left 270ms;
 }
 
-.menu-toggle label{
-	height: 60px;
-	width: 60px;
-	display: grid;
-	place-items: center;
-	font-size: 1.5rem;
-	border-radius: 50%;
+.menu-toggle label {
+  height: 60px;
+  width: 60px;
+  display: grid;
+  place-items: center;
+  font-size: 1.5rem;
+  border-radius: 50%;
 }
 
-.header-icons span{
-	display: inline-block;
-	margin-left: .7rem;
-	font-size: 1.4rem;
+.header-icons span {
+  display: inline-block;
+  margin-left: 0.7rem;
+  font-size: 1.4rem;
 }
 
-.menu-toggle label:hover{
-	background: #efefef;
+.menu-toggle label:hover {
+  background: #efefef;
 }
 
-
-main{
-	margin-top: 70px;
-	padding: 1.5rem;
-	color: #fff;
-	background: #383c4a;
-	min-height:calc(100vh - 70px);
+main {
+  margin-top: 70px;
+  padding: 1.5rem;
+  color: #fff;
+  background: #383c4a;
+  min-height: calc(100vh - 70px);
 }
 
 .main-home {
@@ -232,41 +231,48 @@ main{
   object-position: center;
 }
 
-
 .page-header {
-	display: flex;
-	justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .header-actions button {
-	outline:  none;
-	background: transparent;
-	border:  2px solid #ccc;
-	padding: .6rem 1rem;
-	margin-left: 1rem;
-	border-radius: 3px;
-	font-weight: 600;
+  outline: none;
+  background: transparent;
+  border: 2px solid #ccc;
+  padding: 0.6rem 1rem;
+  margin-left: 1rem;
+  border-radius: 3px;
+  font-weight: 600;
 }
 
 .header-actions button span {
-	font-size: 1.2rem;
-	margin-right: .6rem;
+  font-size: 1.2rem;
+  margin-right: 0.6rem;
 }
 
-.cards{
-	color: #383c4a ;
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	grid-gap: 3rem;
-	margin-top: 2rem;
+.cards {
+  color: #383c4a;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 3rem;
+  margin-top: 2rem;
 }
 
 .card-single {
-	background: #fff;
-	padding: 1rem;
-	box-shadow: 3px 2px 6px rgba(0, 0, 0, 0.4);
+  background: #fff;
+  padding: 1rem;
+  box-shadow: 3px 2px 6px rgba(0, 0, 0, 0.4);
 }
 
+.card-single img{
+  height: 12rem;
+  width: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 2%;
+}
 
 .name {
   display: flex;
@@ -291,8 +297,8 @@ main{
 
 .about {
   display: flex;
-	justify-content: space-between;
-	margin-top: 1rem;
+  justify-content: space-between;
+  margin-top: 1rem;
 }
 .box {
   text-align: center;
@@ -594,9 +600,7 @@ main{
   background: hsla(230, 100%, 67%, 0.7);
 }
 
-
-
-.login-regis .menu{
+.login-regis .menu {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -604,7 +608,7 @@ main{
   min-height: 100vh;
 }
 
-.setting .menu{
+.setting .menu {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -612,8 +616,9 @@ main{
   min-height: 75vh;
 }
 
-input[type=text], select {
-  color:black;
+input[type="text"],
+select {
+  color: black;
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -623,8 +628,9 @@ input[type=text], select {
   box-sizing: border-box;
 }
 
-input[type=email], select {
-  color:black;
+input[type="email"],
+select {
+  color: black;
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -633,8 +639,9 @@ input[type=email], select {
   border-radius: 4px;
   box-sizing: border-box;
 }
-input[type=password], select {
-  color:black;
+input[type="password"],
+select {
+  color: black;
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -644,8 +651,9 @@ input[type=password], select {
   box-sizing: border-box;
 }
 
-input[type=button], select {
-  color:black;
+input[type="button"],
+select {
+  color: black;
   width: 40%;
   padding: 15px;
   margin-left: 15px;
@@ -656,8 +664,9 @@ input[type=button], select {
   box-sizing: border-box;
 }
 
-input[type=submit], select {
-  color:black;
+input[type="submit"],
+select {
+  color: black;
   width: 40%;
   padding: 10px;
   margin-left: 15px;
@@ -668,10 +677,8 @@ input[type=submit], select {
   box-sizing: border-box;
 }
 
-
 .card {
-
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   width: fit-content;
   padding: 10px;
@@ -679,11 +686,9 @@ input[type=submit], select {
   border-radius: 5px;
 }
 
-
 .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
-
 
 .container {
   padding: 2px 16px;
@@ -693,18 +698,15 @@ input[type=submit], select {
   margin: 8px -16px;
 }
 
-
 .row,
 .row > .column {
   padding: 8px;
 }
 
-
 .column {
   float: left;
   width: 20%;
 }
-
 
 .row:after {
   content: "";
@@ -712,15 +714,9 @@ input[type=submit], select {
   clear: both;
 }
 
-
 .content {
   padding: 10px;
-  
 }
-
-
-
-
 
 .dropbtn {
   background-color: #5294e2;
@@ -730,24 +726,21 @@ input[type=submit], select {
   border: none;
 }
 
-
 .dropup {
   position: relative;
   display: inline-block;
 }
 
-
 .dropup-content {
   display: none;
   position: absolute;
   bottom: 25px;
-  right: 0px ;
+  right: 0px;
   background-color: #f1f1f1;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
-
 
 .dropup-content a {
   color: black;
@@ -756,19 +749,17 @@ input[type=submit], select {
   display: block;
 }
 
-
-.dropup-content a:hover {background-color: #ddd}
-
+.dropup-content a:hover {
+  background-color: #ddd;
+}
 
 .dropup:hover .dropup-content {
   display: block;
 }
 
-
 .dropup:hover .dropbtn {
-  background-color: #2980B9;
+  background-color: #2980b9;
 }
-
 
 .loading {
   position: fixed;
@@ -783,23 +774,23 @@ input[type=submit], select {
   right: 0;
 }
 
-
 .loading:before {
-  content: '';
+  content: "";
   display: block;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-    background: radial-gradient(rgba(20, 20, 20,.8), rgba(0, 0, 0, .8));
+  background: radial-gradient(rgba(20, 20, 20, 0.8), rgba(0, 0, 0, 0.8));
 
-  background: -webkit-radial-gradient(rgba(20, 20, 20,.8), rgba(0, 0, 0,.8));
+  background: -webkit-radial-gradient(
+    rgba(20, 20, 20, 0.8),
+    rgba(0, 0, 0, 0.8)
+  );
 }
 
-
 .loading:not(:required) {
-
   font: 0/0 a;
   color: transparent;
   text-shadow: none;
@@ -808,7 +799,7 @@ input[type=submit], select {
 }
 
 .loading:not(:required):after {
-  content: '';
+  content: "";
   display: block;
   font-size: 10px;
   width: 1em;
@@ -820,11 +811,23 @@ input[type=submit], select {
   -o-animation: spinner 700ms infinite linear;
   animation: spinner 700ms infinite linear;
   border-radius: 0.5em;
-  -webkit-box-shadow: rgba(255,255,255, 0.75) 1.5em 0 0 0, rgba(255,255,255, 0.75) 1.1em 1.1em 0 0, rgba(255,255,255, 0.75) 0 1.5em 0 0, rgba(255,255,255, 0.75) -1.1em 1.1em 0 0, rgba(255,255,255, 0.75) -1.5em 0 0 0, rgba(255,255,255, 0.75) -1.1em -1.1em 0 0, rgba(255,255,255, 0.75) 0 -1.5em 0 0, rgba(255,255,255, 0.75) 1.1em -1.1em 0 0;
-box-shadow: rgba(255,255,255, 0.75) 1.5em 0 0 0, rgba(255,255,255, 0.75) 1.1em 1.1em 0 0, rgba(255,255,255, 0.75) 0 1.5em 0 0, rgba(255,255,255, 0.75) -1.1em 1.1em 0 0, rgba(255,255,255, 0.75) -1.5em 0 0 0, rgba(255,255,255, 0.75) -1.1em -1.1em 0 0, rgba(255,255,255, 0.75) 0 -1.5em 0 0, rgba(255,255,255, 0.75) 1.1em -1.1em 0 0;
+  -webkit-box-shadow: rgba(255, 255, 255, 0.75) 1.5em 0 0 0,
+    rgba(255, 255, 255, 0.75) 1.1em 1.1em 0 0,
+    rgba(255, 255, 255, 0.75) 0 1.5em 0 0,
+    rgba(255, 255, 255, 0.75) -1.1em 1.1em 0 0,
+    rgba(255, 255, 255, 0.75) -1.5em 0 0 0,
+    rgba(255, 255, 255, 0.75) -1.1em -1.1em 0 0,
+    rgba(255, 255, 255, 0.75) 0 -1.5em 0 0,
+    rgba(255, 255, 255, 0.75) 1.1em -1.1em 0 0;
+  box-shadow: rgba(255, 255, 255, 0.75) 1.5em 0 0 0,
+    rgba(255, 255, 255, 0.75) 1.1em 1.1em 0 0,
+    rgba(255, 255, 255, 0.75) 0 1.5em 0 0,
+    rgba(255, 255, 255, 0.75) -1.1em 1.1em 0 0,
+    rgba(255, 255, 255, 0.75) -1.5em 0 0 0,
+    rgba(255, 255, 255, 0.75) -1.1em -1.1em 0 0,
+    rgba(255, 255, 255, 0.75) 0 -1.5em 0 0,
+    rgba(255, 255, 255, 0.75) 1.1em -1.1em 0 0;
 }
-
-
 
 @-webkit-keyframes spinner {
   0% {
@@ -891,8 +894,6 @@ box-shadow: rgba(255,255,255, 0.75) 1.5em 0 0 0, rgba(255,255,255, 0.75) 1.1em 1
   }
 }
 
-
-
 .full-img {
   display: flex;
   justify-content: center;
@@ -901,81 +902,82 @@ box-shadow: rgba(255,255,255, 0.75) 1.5em 0 0 0, rgba(255,255,255, 0.75) 1.1em 1
   height: 100%;
   width: 100%;
   overflow: show;
-  margin:auto;
+  margin: auto;
   padding: 1%;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
-    background: radial-gradient(rgba(20, 20, 20,.8), rgba(0, 0, 0, .8));
-  background: -webkit-radial-gradient(rgba(20, 20, 20,.8), rgba(0, 0, 0,.8));
+  background: radial-gradient(rgba(20, 20, 20, 0.8), rgba(0, 0, 0, 0.8));
+  background: -webkit-radial-gradient(
+    rgba(20, 20, 20, 0.8),
+    rgba(0, 0, 0, 0.8)
+  );
 }
 
-.full-img button{
+.full-img button {
   height: 5%;
   background-color: red;
   width: 5%;
 }
 
-
 @media only screen and (max-width: 1124px) {
-	.sidebar {
-		left: -100%;
-		z-index: 30;
-	}
+  .sidebar {
+    left: -100%;
+    z-index: 30;
+  }
 
-	.main-content {
-		margin-left: 0;
-	}
+  .main-content {
+    margin-left: 0;
+  }
 
-	header {
-		left: 0;
-		width: 100%;
-	}
+  header {
+    left: 0;
+    width: 100%;
+  }
 
-	#sidebar-toggle:checked ~ .sidebar {
-		left: 0;
-	}
+  #sidebar-toggle:checked ~ .sidebar {
+    left: 0;
+  }
 
-	#sidebar-toggle:checked ~ .body-label {
-		right: 0;
-	}
+  #sidebar-toggle:checked ~ .body-label {
+    right: 0;
+  }
 
-	.cards {
-		grid-template-columns: repeat(2, 1fr);
-	}
+  .cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 @media only screen and (max-width: 768px) {
-	.cards {
-		grid-template-columns: 100%;
-	}
+  .cards {
+    grid-template-columns: 100%;
+  }
 
-	.page-header {
-		display: block;
-	}
+  .page-header {
+    display: block;
+  }
 
-	.header-actions {
-		margin-top: 1rem;
-		text-align: right;
-	}
+  .header-actions {
+    margin-top: 1rem;
+    text-align: right;
+  }
 
-	.header-actions button:first-child {
-		margin-left: 0rem;
-	}
+  .header-actions button:first-child {
+    margin-left: 0rem;
+  }
 }
-
 
 .slider {
   -webkit-appearance: none;
   width: 100%;
   height: 15px;
-  border-radius: 5px;  
+  border-radius: 5px;
   background: #d3d3d3;
   outline: none;
   opacity: 0.7;
-  -webkit-transition: .2s;
-  transition: opacity .2s;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
 }
 
 .slider::-webkit-slider-thumb {
@@ -983,8 +985,8 @@ box-shadow: rgba(255,255,255, 0.75) 1.5em 0 0 0, rgba(255,255,255, 0.75) 1.1em 1
   appearance: none;
   width: 25px;
   height: 25px;
-  border-radius: 50%; 
-  background: #04AA6D;
+  border-radius: 50%;
+  background: #04aa6d;
   cursor: pointer;
 }
 
@@ -992,6 +994,6 @@ box-shadow: rgba(255,255,255, 0.75) 1.5em 0 0 0, rgba(255,255,255, 0.75) 1.1em 1
   width: 25px;
   height: 25px;
   border-radius: 50%;
-  background: #04AA6D;
+  background: #04aa6d;
   cursor: pointer;
 }
