--- a/ipuatsons/src/assets/style.css
+++ b/ipuatsons/src/assets/style.css
@@ -268,6 +268,7 @@ main {
 .card-single img{
   height: 12rem;
   width: auto;
+  overflow: scale-down;
   display: block;
   margin-left: auto;
   margin-right: auto;
