--- a/ipuatsons/src/assets/style.css
+++ b/ipuatsons/src/assets/style.css
@@ -263,11 +263,16 @@ main {
   background: #fff;
   padding: 1rem;
   box-shadow: 3px 2px 6px rgba(0, 0, 0, 0.4);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .card-single img{
-  height: 12rem;
+  justify-self: center;
   width: auto;
+  max-height: 12rem;
   overflow: scale-down;
   display: block;
   margin-left: auto;
