--- a/ipuatsons/src/assets/style.css
+++ b/ipuatsons/src/assets/style.css
@@ -262,9 +262,12 @@ main{
 }
 
 .card-single {
-	background: #fff;
 	padding: 1rem;
 	box-shadow: 3px 2px 6px rgba(0, 0, 0, 0.4);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 
