--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -266,7 +266,7 @@ main{
 	box-shadow: 3px 2px 6px rgba(0, 0, 0, 0.4);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
 }
 
