--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -262,9 +262,13 @@ main{
 }
 
 .card-single {
-	background: #fff;
 	padding: 1rem;
 	box-shadow: 3px 2px 6px rgba(0, 0, 0, 0.4);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  max-width: 35rem;
 }
 
 
