--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -266,8 +266,10 @@ main{
 	box-shadow: 3px 2px 6px rgba(0, 0, 0, 0.4);
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-items: stretch;
+  align-content: stretch;
   max-width: 23rem;
   width: 95%;
   min-height: 20rem;
