--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -1020,6 +1020,7 @@ box-shadow: rgba(255,255,255, 0.75) 1.5em 0 0 0, rgba(255,255,255, 0.75) 1.1em 1
 	.header-actions {
 		margin-top: 1rem;
 		text-align: right;
+    display: flex;
 	}
 
 	.header-actions button:first-child {
