gan preview and export

--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -793,6 +793,8 @@ input[type=submit], select {
   justify-content:center;
   align-items: center;
   align-content:center;
+  height: 60%;
+  width: 60%;
 }
 
 .uploading:before {
